fix: scrollbar

--- a/src/app/components/alert/styles.scss
+++ b/src/app/components/alert/styles.scss
@@ -1,5 +1,5 @@
 .alert {
-  min-width: 120px;
+  width: 0px;
   min-height: 40px;
   border-radius: 2px 0 0 2px;
   background-color: var(--white-100);
@@ -9,20 +9,21 @@
   right: 0;
   z-index: 10;
   box-shadow: 0px 2px 8px 0px #00000090;
+  overflow: hidden;
 
   opacity: 0;
   transition: all 0.3s ease-in-out;
-  transform: translateX(100%);
 
   &.is-visible {
     opacity: 1;
-    transform: translateX(0);
+    width: 170px;
   }
-
+  
   .alert_message {
     font-size: 16px;
     padding: 12px;
     margin: 0;
+    white-space: nowrap;
   }
 
   &.is-success {
