--- a/src/app/components/header/styles.scss
+++ b/src/app/components/header/styles.scss
@@ -20,19 +20,20 @@
 
   .header_menu-options {
     background-color: var(--white-100);
-    width: 65%;
+    width: 0px;
     height: 100vh;
     position: absolute;
     right: 0;
     top: 0;
-    opacity: 0;
-    transform: translateX(100%);
+    opacity: 1;
+    overflow: hidden;
+
     transition: all 0.3s ease-in-out;
     box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
 
     &.is-visible {
       opacity: 1;
-      transform: translateX(0);
+      width: 65%;
     }
   }
 
