--- a/src/app/components/menu/item/styles.scss
+++ b/src/app/components/menu/item/styles.scss
@@ -1,4 +1,5 @@
 .menu-item {
+  width: auto;
   height: 40px;
   padding: 0 20px;
   display: flex;
