--- a/src/app/components/menu/styles.scss
+++ b/src/app/components/menu/styles.scss
@@ -1,5 +1,5 @@
 .menu {
-  width: 110%;
+  width: 100%;
   margin: 0;
   padding: 0;
   margin-top: 76px;
