--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,7 +7,6 @@ body {
   font-family: Inter;
   background-color: var(--bg-content-dark);
   color: var(--white-100);
-  overflow: hidden !important;
 }
 
 :root {
